Update environment configuration in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# API URL
-REACT_APP_API_URL=https://your-backend-domain.vercel.app/api
+# API URL - Backend deployed on Vercel
+REACT_APP_API_URL=https://stream-flix-backend.vercel.app/api
 
-# Other configs
+# Razorpay Configuration
+REACT_APP_RAZORPAY_KEY_ID=rzp_test_RdT7YcrbOYSSgH
+
+# Environment
 REACT_APP_ENV=production
